# fast-similarity-methods-rust

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
src/plotting/: plotter.py
src/scripting/: bash.py  plotter.py  run.py  run_all.py
src/scripts/: data.csv  diagnostic message [1]  generate_comparison_data.rs  generate_string_pairs.rs  sequences_100.csv
src/utils/: methods.rs  mod.rs  representation_methods.rs  sequence.rs  similarity_methods.rs  tensor.rs
tests/: cli.rs  representations.rs
tests/outputs/: data_2001_l2norm.csv  data_3_l2norm.csv  data_3_minimizer.csv
