[package]
name = "similarity_methods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
edit-distance = "2.1.0"
csv = "1.3.0"
serde = { version = "1", features = ["derive"] }

[lib]
name = "similarity_methods"  # This name will be used to reference the library
path = "src/lib.rs"  # Specify the path to your library file


[[bin]]
name = "generate_comparison_data"
path = "src/scripts/generate_comparison_data.rs"

[[bin]]
name = "generate_string_pairs"
path = "src/scripts/generate_string_pairs.rs"